Remade the whole register thingy

--- a/app/src/main/res/layout/activity_school_and_birthday_register.xml
+++ b/app/src/main/res/layout/activity_school_and_birthday_register.xml
@@ -9,27 +9,11 @@
     tools:context="com.unnamedsoftware.russesamfunnet.FacebookRegisterActivity">
 
     <include
+        android:id="@+id/include"
         layout="@layout/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/logo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginEnd="92dp"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="28dp"
-        android:src="@drawable/logo_img"
-        app:civ_border_color="#EEEEEE"
-        app:civ_border_width="4dp"
-        app:civ_shadow="true"
-        app:civ_shadow_color="#8BC34A"
-        app:civ_shadow_radius="10"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.481"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/okButton"
@@ -50,10 +34,10 @@
     <EditText
         android:id="@+id/dateDisplay"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="42dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="528dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -63,8 +47,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageButton
         android:id="@+id/dateImage"
@@ -82,7 +66,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/dateDisplay"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.38" />
+        app:layout_constraintVertical_bias="0.115" />
 
     <Spinner
         android:id="@+id/municipalitySpinner"
@@ -115,24 +99,17 @@
         app:layout_constraintTop_toBottomOf="@+id/dateDisplay"
         app:layout_constraintVertical_bias="0.068" />
 
-    <ScrollView
-        android:id="@+id/schoolRegistrationSearchScrollView"
-        android:layout_width="340dp"
-        android:layout_height="177dp"
+    <include
+        android:id="@+id/schoolRegistration"
+        layout="@layout/content_school_list"
+        android:layout_width="329dp"
+        android:layout_height="335dp"
         android:layout_margin="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.826"
-        android:fillViewport="true">
+        app:layout_constraintTop_toBottomOf="@+id/dateDisplay" />
 
-        <FrameLayout
-            android:id="@+id/schoolRegistrationSearchFrameLayout"
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp" />
-    </ScrollView>
 </android.support.constraint.ConstraintLayout>
