--- a/app/src/main/res/layout/activity_group_scoreboard.xml
+++ b/app/src/main/res/layout/activity_group_scoreboard.xml
@@ -8,8 +8,9 @@
 
     <!-- ActionBar -->
     <include
+        android:id="@+id/toolbar"
         layout="@layout/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
 </android.support.constraint.ConstraintLayout>
