--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,12 +15,12 @@
 
     <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/logo"
-        android:layout_width="200dp"
         android:layout_height="200dp"
+        android:layout_width="200dp"
         android:layout_marginEnd="92dp"
         android:layout_marginStart="92dp"
         android:layout_marginTop="28dp"
-        android:src="@drawable/logo_img"
+        android:src="@drawable/logo_v3_48dp"
         app:civ_border_color="#EEEEEE"
         app:civ_border_width="4dp"
         app:civ_shadow="true"
