--- a/app/src/main/res/layout/activity_knot.xml
+++ b/app/src/main/res/layout/activity_knot.xml
@@ -28,7 +28,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-    <Button
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_witness_button1"
 
         android:layout_width="80dp"
@@ -36,19 +36,15 @@
 
         android:layout_marginStart="100dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/circular_button"
-        android:shadowColor="#A8A8A8"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="5"
-        android:text="+"
-        android:textColor="#000000"
-        android:textSize="60sp"
+
+        android:backgroundTint="#A8A8A8"
+        app:srcCompat="@drawable/ic_add_white_48dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/add_witness_text_view" />
 
-    <Button
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_witness_button2"
 
         android:layout_width="80dp"
@@ -56,17 +52,34 @@
 
         android:layout_marginEnd="100dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/circular_button"
-        android:shadowColor="#A8A8A8"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="5"
-        android:text="+"
-        android:textColor="#000000"
-        android:textSize="60sp"
+
+        android:backgroundTint="#A8A8A8"
+        app:srcCompat="@drawable/ic_add_white_48dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/add_witness_text_view" />
+
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/complete_button"
+
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+
+        app:backgroundTint="@color/colorPrimaryDark"
+        app:srcCompat="@drawable/ic_add_white_48dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description"/>
+
 
     <TextView
         android:id="@+id/description"
@@ -104,30 +117,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/knot_picture" />
-
-    <Button
-        android:id="@+id/complete_button"
-
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/complete_knot_button"
-
-        android:shadowColor="#A8A8A8"
-        android:shadowDx="0"
-        android:shadowDy="0"
-        android:shadowRadius="5"
-        android:text="X"
-        android:textColor="#000000"
-        android:textSize="60sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description" />
 
 
 </android.support.constraint.ConstraintLayout>
