--- a/app/src/main/res/layout/event_row.xml
+++ b/app/src/main/res/layout/event_row.xml
@@ -3,10 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/eaEventLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="55dp"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
-    android:background="?android:attr/selectableItemBackground"
+    android:background="@drawable/event_layer_list_background"
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical">
@@ -14,9 +14,12 @@
     <TextView
         android:id="@+id/eaEventName"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="12dp"
-        android:text="TEST TEST TEST" />
+        android:layout_centerVertical="true"
+        android:text="TEST TEST TEST"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
