Events and groups layout complete

--- a/app/src/main/res/layout/activity_group_scoreboard.xml
+++ b/app/src/main/res/layout/activity_group_scoreboard.xml
@@ -13,4 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <include
+        layout="@layout/content_scoreboard"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
 </android.support.constraint.ConstraintLayout>
