--- a/app/src/main/res/layout/activity_group_hub.xml
+++ b/app/src/main/res/layout/activity_group_hub.xml
@@ -15,8 +15,8 @@
 
     <!-- Profile pictures -->
     <include
-        android:id="@+id/include3"
         layout="@layout/content_group_hub_users"
+        android:orientation="horizontal"
         android:layout_width="320dp"
         android:layout_height="98dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -35,7 +35,7 @@
         android:layout_marginBottom="9dp"
         android:layout_marginEnd="7dp"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="8dp"
         android:clickable="true"
         app:backgroundTint="@color/colorPrimaryDark"
         app:layout_constraintBottom_toTopOf="@+id/view2"
@@ -43,7 +43,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/include3"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.26"
         app:srcCompat="@drawable/ic_more_horiz_white_48dp" />
 
     <!-- Messages -->
