--- a/app/src/main/res/layout/content_group_hub_users.xml
+++ b/app/src/main/res/layout/content_group_hub_users.xml
@@ -2,11 +2,14 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/ghuUsers"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:scrollbars="horizontal" />
 
 </RelativeLayout>
