--- a/app/src/main/res/layout/event_dialog.xml
+++ b/app/src/main/res/layout/event_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,9 +12,11 @@
         android:id="@+id/eventDialogDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="Test Test"
         android:textAlignment="center"
-        tools:layout_editor_absoluteX="178dp"
+        android:gravity="center_horizontal"
+        tools:layout_editor_absoluteX="183dp"
         tools:layout_editor_absoluteY="4dp" />
 
 
