--- a/app/src/main/res/layout/group_hub_user_row.xml
+++ b/app/src/main/res/layout/group_hub_user_row.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:orientation="horizontal">
 
     <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/ghuProfilePicture"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="19dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:src="@drawable/default_user"
         app:civ_border_color="#EEEEEE"
         app:civ_border_width="4dp"
@@ -18,7 +19,5 @@
         app:civ_shadow_color="#8BC34A"
         app:civ_shadow_radius="10"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.043"
         app:layout_constraintTop_toTopOf="parent" />
-
 </LinearLayout>
