--- a/app/src/main/res/layout/group_list_row.xml
+++ b/app/src/main/res/layout/group_list_row.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/glaGroupListRow"
+    android:id="@+id/glaGroupListRowLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="55dp"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
+    android:background="@drawable/event_layer_list_background"
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical">
@@ -18,6 +19,8 @@
         android:layout_alignParentStart="true"
         android:textColor="@android:color/black"
         android:layout_marginStart="16dp"
-        android:textSize="42sp"/>
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:text="TEST TEST TEST"/>
 
 </RelativeLayout>
