--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorPrimaryBackground">#ffffff</color>
     <color name="colorAccent">#c3c3c3</color>
     <color name="colorShadow">#7F000000</color>
+    <color name="colorKnotNotCompleted">#FE0000</color>
+    <color name="colorKnotCompleted">#28AF37</color>
 </resources>
