--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorShadow">#7F000000</color>
     <color name="colorKnotNotCompleted">#FE0000</color>
     <color name="colorKnotCompleted">#28AF37</color>
+    <color name="colorBlack">#000</color>
 </resources>
