--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -27,7 +27,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.728"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
+    <!---android:src="@drawable/default_user" -->
 
     <ImageView
         android:id="@+id/russCard"
@@ -43,7 +44,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userProfilePicture"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/russ_card" />
+        app:srcCompat="@drawable/russ_card"/>
 
         <include
             android:id="@+id/user_knot_list"
