--- a/app/src/main/res/layout/content_feed.xml
+++ b/app/src/main/res/layout/content_feed.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<RelativeLayout
+<android.support.v4.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swipe_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -17,4 +18,4 @@
         android:layout_alignParentTop="true"
         android:scrollbars="vertical" />
 
-</RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
