Ground works for russ card taking and colour changes to scoreboard

--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -46,16 +46,19 @@
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/russ_card"/>
 
-        <include
-            android:id="@+id/user_knot_list"
-            layout="@layout/content_user_knot_list"
-            android:layout_width="match_parent"
-            android:layout_height="287dp"
-            android:layout_marginTop="8dp"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/russCard" />
+    <include
+        android:id="@+id/user_knot_list"
+        layout="@layout/content_user_knot_list"
+        android:layout_width="match_parent"
+        android:layout_height="193dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/russCard"
+        app:layout_constraintVertical_bias="0.00999999" />
 
 </android.support.constraint.ConstraintLayout>
