--- a/app/src/main/res/drawable/user_scoreboard_border.xml
+++ b/app/src/main/res/drawable/user_scoreboard_border.xml
@@ -3,12 +3,12 @@
     <item>
 
         <shape>
-            <solid android:color="#ffffff" />
+            <solid android:color="#e9e9e9" />
             <stroke
                 android:dashGap="5dp"
                 android:dashWidth="5dp"
-                android:width="1dp"
-                android:color="@color/colorPrimaryDark" />
+                android:width="2dp"
+                android:color="@color/colorPrimary" />
             <padding
                 android:bottom="5dp"
                 android:left="5dp"
