--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -18,7 +18,6 @@
         android:layout_marginEnd="92dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="64dp"
-        android:src="@drawable/default_user"
         app:civ_border_color="#EEEEEE"
         app:civ_border_width="4dp"
         app:civ_shadow="true"
@@ -43,8 +42,7 @@
         app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userProfilePicture"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/russ_card"/>
+        app:layout_constraintVertical_bias="0.0"/>
 
     <include
         android:id="@+id/user_knot_list"
