Russ card complete (no server connection)

--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -21,7 +21,7 @@
         app:civ_border_color="#EEEEEE"
         app:civ_border_width="4dp"
         app:civ_shadow="true"
-        app:civ_shadow_color="#8BC34A"
+        app:civ_shadow_color="@color/colorPrimary"
         app:civ_shadow_radius="10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.728"
@@ -48,7 +48,7 @@
         android:id="@+id/user_knot_list"
         layout="@layout/content_user_knot_list"
         android:layout_width="match_parent"
-        android:layout_height="193dp"
+        android:layout_height="274dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
