--- a/app/src/main/res/layout/activity_crop_image.xml
+++ b/app/src/main/res/layout/activity_crop_image.xml
@@ -14,6 +14,7 @@
         android:weightSum="2">
 
         <Button
+            android:id="@+id/chooseDifferent"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:paddingLeft="8dp"
