--- a/app/src/main/res/layout/user_russ_card_clicked_dialog.xml
+++ b/app/src/main/res/layout/user_russ_card_clicked_dialog.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/white_rectangle"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/userRussCardEnlarged"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="8dp"
-        android:adjustViewBounds="true"
-        android:clickable="true"
-        android:scaleType="fitCenter" />
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:background="@android:color/transparent"
+        android:gravity="center">
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/userRussCardEnlarged"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:gravity="center_horizontal"
+            android:adjustViewBounds="true"/>
+    </RelativeLayout>
+</LinearLayout>
